--- a/Scene.fxml
+++ b/Scene.fxml
@@ -13,7 +13,7 @@
    <children>
       <HBox prefHeight="60.0" prefWidth="1600.0" spacing="5.0" styleClass="menu">
          <children>
-            <Button fx:id="btnBack" mnemonicParsing="false" onAction="#back" prefHeight="40.0" prefWidth="50.0" styleClass="btn">
+            <Button fx:id="btnBack" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#back" prefHeight="40.0" prefWidth="40.0" styleClass="btn">
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -25,7 +25,7 @@
                   <Insets />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnForward" mnemonicParsing="false" onAction="#forward" prefHeight="40.0" prefWidth="50.0" styleClass="btn">
+            <Button fx:id="btnForward" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#forward" prefHeight="40.0" prefWidth="40.0" styleClass="btn">
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -34,7 +34,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnRefresh" mnemonicParsing="false" onAction="#refresh" prefHeight="40.0" prefWidth="50.0" styleClass="btn">
+            <Button fx:id="btnRefresh" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#refresh" prefHeight="40.0" prefWidth="40.0" styleClass="btn">
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -44,7 +44,7 @@
                </graphic>
             </Button>
             <TextField fx:id="txtFieldUrl" onAction="#goWeb" prefHeight="40.0" prefWidth="1395.0" promptText="URL" />
-            <Button fx:id="btnZoomIn" mnemonicParsing="false" onAction="#zoomIn" prefHeight="40.0" prefWidth="50.0" styleClass="btn">
+            <Button fx:id="btnZoomIn" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#zoomIn" prefHeight="40.0" prefWidth="40.0" styleClass="btn">
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -53,7 +53,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnZoomOut" mnemonicParsing="false" onAction="#zoomOut" prefHeight="40.0" prefWidth="50.0" styleClass="btn">
+            <Button fx:id="btnZoomOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#zoomOut" prefHeight="40.0" prefWidth="40.0" styleClass="btn">
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -62,7 +62,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnSource" mnemonicParsing="false" onAction="#source" prefHeight="40.0" prefWidth="50.0" styleClass="btn">
+            <Button fx:id="btnSource" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#source" prefHeight="40.0" prefWidth="40.0" styleClass="btn">
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
